<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    >

    <TextView
        android:id="@+id/tvNewsapi_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:autoLink="web"
        android:text="@string/newsapiTxt"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        android:typeface="normal" />
    <TextView
        android:id="@+id/tvCurrApikey_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/apikeyCurr_txt" />

    <TextView
        android:id="@+id/tvCurrApikey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:hint="@string/apikeyCurr_txt"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvApikey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/apikey_txt" />

    <EditText
        android:id="@+id/etApikey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:inputType="text" />




</LinearLayout>
